@@ -1,5 +1,5 @@
 Package: mirt
-Version: 1.4.5
+Version: 1.4.6
 Date: 2014-04-23
 Type: Package
 Title: Multidimensional Item Response Theory
